fixing buttons alignment

--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -116,6 +116,7 @@
 
 .buttons-container {
     grid-area: button;
+    justify-content: flex-start;
 }
 
 .total-connections {
